# CICP-SLAM

./: README.md  setup.sh
external_libraries/g2o_master/install_dir/include/g2o/apps/g2o_viewer/: ui_base_main_window.h  ui_base_properties_widget.h
external_libraries/pcl_1_9/common/include/pcl/common/: eigen.h
external_libraries/pcl_1_9/common/include/pcl/common/impl/: eigen.hpp
external_libraries/pcl_1_9/registration/include/pcl/registration/: transformation_estimation_correntropy_svd.h
external_libraries/pcl_1_9/registration/include/pcl/registration/impl/: registration.hpp  transformation_estimation_correntropy_svd.hpp  transformation_estimation_svd.hpp
src/cicp_slam/: CMakeLists.txt  icp_mcc.rviz  icp_mcc_kitti.rviz  odombag_icp01.bag  odombag_icp01.bag.active  package.xml
src/cicp_slam/include/pcl_icp_mcc/: Pose_optimization.hpp  pcl_mcc_icp_utilities.hpp
src/cicp_slam/launch/: cicp.launch
src/cicp_slam/src/: icp_mcc_nodelet.cpp  preprocessing.cpp
src/pcl_icp_mcc/: CMakeLists.txt  package.xml  pcl_icp_mcc.rviz
src/pcl_icp_mcc/include/pcl_icp_mcc/: ICP_Node.hpp  Pose_optimization.hpp  icp_mcc.hpp  keyframe_updater.hpp  pcl_mcc_icp_utilities.hpp  plot_1.py  preprocessing.hpp
src/pcl_icp_mcc/launch/: mcc_icp.launch
src/pcl_icp_mcc/src/: pcl_icp_mcc.cpp
